--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <p class="tagline">So Sasha <b>is</b> proud of Papa</p>
     <div class="cta-row">
       <button id="musicBtn" class="btn neon">▶ PLAY THE SONG</button>
+      <div id="musicPlayer" style="display:none; margin-top:20px;">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/CdqoNKCCt7A?si=F388eKChp0E70L1A&amp;start=54" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>->
+</div>
       <a class="btn hollow" href="#drills">Start drills</a>
     </div>
     <div class="ticker">
