--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DON'T YOU FORGET (FOR SASHA’S SAKE) THE VERB “TO BE”</title>
+  <title>DON'T YOU FORGET THE VERB “TO BE”</title>
   <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
@@ -14,8 +14,8 @@
   </div>
 
   <header class="hero">
-    <h1 class="glow">DON'T YOU <span>FORGET</span><br>FOR SASHA’S SAKE:<br><em>TO BE</em></h1>
-    <p class="tagline">So Sasha <b>is</b> proud of Papa</p>
+    <h1 class="glow">DON'T YOU <span>FORGET</span><br>THE VERB:<br><em>TO BE</em></h1>
+    <p class="tagline">Neon English Drills <b>is</b> Sasha approved</p>
     <div class="cta-row">
       <button id="musicBtn" class="btn neon">▶ PLAY THE SONG</button>
       <div id="musicPlayer" style="display:none; margin-top:20px;">
