--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <header class="hero">
     <h1 class="glow">DON'T YOU <span>FORGET</span><br>THE VERB:<br><em>TO BE</em></h1>
-    <p class="tagline">Neon English Drills <b>is</b> Sasha approved</p>
+    <p class="tagline">Neon English Drills <b>-</b> Sasha approved</p>
     <div class="cta-row">
       <button id="musicBtn" class="btn neon">▶ PLAY THE SONG</button>
       <div id="musicPlayer" style="display:none; margin-top:20px;">
