--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DON'T YOU FORGET THE VERB “TO BE”</title>
+  <title>DON'T YOU FORGET (FOR SASHA’S SAKE) THE VERB “TO BE”</title>
   <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
@@ -14,13 +14,10 @@
   </div>
 
   <header class="hero">
-    <h1 class="glow">DON'T YOU <span>FORGET</span><br>THE VERB:<br><em>TO BE</em></h1>
-    <p class="tagline">Neon English Drills <b>-</b> Sasha approved</p>
+    <h1 class="glow">DON'T YOU <span>FORGET</span><br>FOR SASHA’S SAKE:<br><em>TO BE</em></h1>
+    <p class="tagline">So Sasha <b>is</b> proud of Papa</p>
     <div class="cta-row">
       <button id="musicBtn" class="btn neon">▶ PLAY THE SONG</button>
-      <div id="musicPlayer" style="display:none; margin-top:20px;">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/CdqoNKCCt7A?si=F388eKChp0E70L1A&amp;start=54" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>->
-</div>
       <a class="btn hollow" href="#drills">Start drills</a>
     </div>
     <div class="ticker">
@@ -55,9 +52,9 @@
       <h2>Neon Reminders</h2>
       <div class="poster-grid">
         <div class="poster">I <span>AM</span></div>
-        <div class="poster">YOU/WE/THEY <span> ARE</span></div>
-        <div class="poster">HE/SHE/IT <span> IS</span></div>
-        <div class="poster">SASHA <span> IS</span> LOVED</div>
+        <div class="poster">YOU/WE/THEY <span>ARE</span></div>
+        <div class="poster">HE/SHE/IT <span>IS</span></div>
+        <div class="poster">SASHA <span>IS</span> LOVED</div>
       </div>
     </section>
   </main>
